# i-ching

./: .gitignore  .mcp.json  Cargo.toml  LICENSE  README.md
.claude-plugin/: plugin.json
.github/workflows/: release.yml
data/: hexagrams.json  iching_wilhelm_translation.json  trigrams.json
src/: cli.rs  cli.rs.backup  lib.rs
src/core/: data.rs  divination.rs  mod.rs  reading.rs
