[package]
name = "i-ching"
version = "0.1.1"
edition = "2024"
rust-version = "1.85.1"
description = "I Ching divination readings for CLI and Goose extension"
authors = ["Joe Gracyk <joe@thecolouroutof.space>"]
license = "MIT"

[lib]
name = "i_ching"
path = "src/lib.rs"

[[bin]]
name = "i-ching"
path = "src/bin/main.rs"

[[bin]]
name = "i-ching-mcp-server"
path = "src/bin/mcp_server.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.9"
anyhow = "1.0"
uuid = "1.0"

# For MCP server
jsonrpc-core = "18.0"
jsonrpc-stdio-server = "18.0"

[dev-dependencies]
pretty_assertions = "1.0"
