[package]
name = "i-ching"
version = "1.0.0"
edition = "2024"
rust-version = "1.85.1"
description = "I Ching divination readings for CLI and Goose extension"
authors = ["Joe Gracyk <joe@thecolouroutof.space>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/threemachines/i-ching"
repository = "https://github.com/threemachines/i-ching"
keywords = ["i-ching", "iching", "divination", "hexagram", "mcp"]
categories = ["command-line-utilities", "simulation", "development-tools"]

[lib]
name = "i_ching"
path = "src/lib.rs"

[[bin]]
name = "i-ching"
path = "src/bin/main.rs"

[[bin]]
name = "i-ching-mcp-server"
path = "src/bin/mcp_server.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.9"
anyhow = "1.0"
uuid = "1.0"

# For MCP server
jsonrpc-core = "18.0"
jsonrpc-stdio-server = "18.0"

[dev-dependencies]
pretty_assertions = "1.0"
